fixes for quarkus extension